--- a/.travis.yml
+++ b/.travis.yml
@@ -66,7 +66,7 @@ jobs:
       script: skip
       before_deploy:
         - source bin/deploy/env.sh
-        - bash bin/deploy/create-zip.sh
+        - bash bin/deploy/gh-releases.sh
       deploy:
         provider: releases
         skip_cleanup: true
