--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,11 +12,14 @@ jobs:
     env:
       CI: 1
       TRAVIS_BUILD_DIR: ${{ github.workspace }}
+      TRAVIS_BUILD_STAGE_NAME: Test
     steps:
       - name: Checkout
         uses: actions/checkout@master
         with:
           fetch-depth: 3
+      - name: Prepare
+        run: bash bin/prepare.sh
       - name: Run tests
         run: bash bin/test/phpunit.sh
       - uses: 8398a7/action-slack@v1
