--- a/composer.json
+++ b/composer.json
@@ -41,10 +41,10 @@
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
         "fzaninotto/faker": "^1.8",
         "nunomaduro/collision": "^3.0",
-        "phpmd/phpmd": "^2.6",
-        "phpunit/phpunit": "^8.0",
-        "squizlabs/php_codesniffer": "^3.4",
-        "orchestra/testbench": "^3.8"
+        "phpmd/phpmd": "^2.7",
+        "phpunit/phpunit": "^8.4",
+        "squizlabs/php_codesniffer": "^3.5",
+        "orchestra/testbench": "^4.2"
     },
     "scripts": {
         "setup": [
@@ -88,6 +88,11 @@
         "gh-releases": [
             "@gh-prepare",
             "TRAVIS_BUILD_DIR=$(cd $(dirname $0); pwd) source bin/deploy/env.sh && bash bin/deploy/gh-releases.sh"
+        ],
+        "packages": [
+            "rm -rdf vendor",
+            "rm -f composer.lock",
+            "composer require --dev codedungeon/phpunit-result-printer dealerdirect/phpcodesniffer-composer-installer fzaninotto/faker nunomaduro/collision phpmd/phpmd phpunit/phpunit squizlabs/php_codesniffer orchestra/testbench"
         ]
     },
     "config": {
