--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "technote/laravel-search-helper",
     "type": "library",
-    "license": "GPL-2.0+",
+    "license": "MIT",
     "description": "Search helper for laravel",
     "homepage": "https://github.com/technote-space/laravel-search-helper",
     "keywords": [
