--- a/composer.json
+++ b/composer.json
@@ -39,12 +39,12 @@
     "require-dev": {
         "codedungeon/phpunit-result-printer": "^0.26.2",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-        "fzaninotto/faker": "^1.8",
+        "fzaninotto/faker": "^1.9",
         "nunomaduro/collision": "^3.0",
-        "phpmd/phpmd": "^2.7",
-        "phpunit/phpunit": "^8.4",
+        "phpmd/phpmd": "^2.8",
+        "phpunit/phpunit": "^8.5",
         "squizlabs/php_codesniffer": "^3.5",
-        "orchestra/testbench": "^4.2"
+        "orchestra/testbench": "^4.5"
     },
     "scripts": {
         "setup": [
@@ -65,7 +65,7 @@
             "phpcs --standard=./phpcs.xml"
         ],
         "phpmd": [
-            "phpmd ./src/,./tests/ text phpmd.xml"
+            "phpmd ./src/,./tests/ ansi phpmd.xml"
         ],
         "phpunit": [
             "phpunit --stop-on-failure --colors=always"
