--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,20 +10,27 @@ name: CI
 
 env:
   CI: 1
-  TRAVIS_BUILD_DIR: ${{ github.workspace }}
+  COVERAGE: 1
+  WORKSPACE: ${{ github.workspace }}
 
 jobs:
   phpcs:
     name: PHP Code Sniffer
     runs-on: ubuntu-latest
+    env:
+      LINT: 1
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 3
+      - uses: technote-space/get-diff-action@v1
+        with:
+          SUFFIX_FILTER: .php
       - name: Get Composer Cache Directory
         id: composer-cache
         run: |
           echo "::set-output name=dir::$(composer config cache-files-dir)"
+        if: env.GIT_DIFF
       - name: Cache composer modules
         uses: actions/cache@v1
         with:
@@ -31,10 +38,13 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-composer-
+        if: env.GIT_DIFF
       - name: Prepare
         run: composer setup
+        if: env.GIT_DIFF
       - name: Check code style
         run: composer phpcs
+        if: env.GIT_DIFF
       - uses: 8398a7/action-slack@v1
         with:
           type: failure
@@ -45,14 +55,21 @@ jobs:
   phpmd:
     name: PHPMD
     runs-on: ubuntu-latest
+    env:
+      LINT: 1
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 3
+      - uses: technote-space/get-diff-action@v1
+        with:
+          SUFFIX_FILTER: .php
+          SEPARATOR: ','
       - name: Get Composer Cache Directory
         id: composer-cache
         run: |
           echo "::set-output name=dir::$(composer config cache-files-dir)"
+        if: env.GIT_DIFF
       - name: Cache composer modules
         uses: actions/cache@v1
         with:
@@ -60,10 +77,13 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-composer-
+        if: env.GIT_DIFF
       - name: Prepare
         run: composer setup
+        if: env.GIT_DIFF
       - name: Check code style
         run: composer phpmd
+        if: env.GIT_DIFF
       - uses: 8398a7/action-slack@v1
         with:
           type: failure
@@ -79,18 +99,31 @@ jobs:
     strategy:
       matrix:
         php: ['7.2', '7.3']
+        include:
+          - php: '7.3'
+            SEND_CODECOV: 1
     steps:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 3
+      - uses: technote-space/get-diff-action@v1
+        with:
+          PREFIX_FILTER: |
+            configs/
+            src/
+            tests/
+          SUFFIX_FILTER: .php
+          FILES: composer.lock
       - name: Switch PHP version
         env:
           PHP_VERSION: ${{ matrix.php }}
         run: sudo ln -sf "/usr/bin/php$PHP_VERSION" /etc/alternatives/php
+        if: env.GIT_DIFF || github.event_name == 'push'
       - name: Get Composer Cache Directory
         id: composer-cache
         run: |
           echo "::set-output name=dir::$(composer config cache-files-dir)"
+        if: env.GIT_DIFF || github.event_name == 'push'
       - name: Cache composer modules
         uses: actions/cache@v1
         with:
@@ -98,15 +131,22 @@ jobs:
           key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: |
             ${{ runner.os }}-composer-
+        if: env.GIT_DIFF || github.event_name == 'push'
       - name: Prepare
         run: composer setup
+        if: env.GIT_DIFF || github.event_name == 'push'
       - name: Run tests
         run: composer phpunit
+        if: env.GIT_DIFF || github.event_name == 'push'
       - name: Codecov
-        run: curl -s https://codecov.io/bash | bash -s -- -t $CODECOV_TOKEN -f $COVERAGE_FILE
+        run: |
+          if [ -n "$CODECOV_TOKEN" ]; then
+            curl -s https://codecov.io/bash | bash -s -- -t $CODECOV_TOKEN -f $COVERAGE_FILE
+          fi
         env:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
           COVERAGE_FILE: ./coverage/clover.xml
+        if: matrix.SEND_CODECOV == 1 && (env.GIT_DIFF || github.event_name == 'push')
       - uses: 8398a7/action-slack@v1
         with:
           type: failure
