--- a/composer.json
+++ b/composer.json
@@ -38,46 +38,30 @@
     },
     "require-dev": {
         "codedungeon/phpunit-result-printer": "^0.26.2",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
+        "dealerdirect/phpcodesniffer-composer-installer": "^0.6.2",
         "fzaninotto/faker": "^1.9",
-        "nunomaduro/collision": "^3.0",
         "phpmd/phpmd": "^2.8",
         "phpunit/phpunit": "^8.5",
         "squizlabs/php_codesniffer": "^3.5",
-        "orchestra/testbench": "^4.5"
+        "orchestra/testbench": "^4.6"
     },
     "scripts": {
         "setup": [
             "composer install --no-interaction --prefer-dist --no-suggest"
         ],
-        "test": [
-            "@stage-lint",
-            "@stage-test"
+        "prepare": [
+            "mkdir -p ./fixtures/.git",
+            "chmod -R +w ./fixtures/.git && rm -rdf ./fixtures",
+            "git clone --depth=1 https://github.com/wp-content-framework/fixtures.git fixtures",
+            "composer install"
         ],
-        "stage-lint": [
-            "@phpcs",
-            "@phpmd"
-        ],
-        "stage-test": [
-            "@phpunit"
-        ],
-        "phpcs": [
-            "phpcs --standard=./phpcs.xml"
-        ],
-        "phpmd": [
-            "phpmd ./src/,./tests/ ansi phpmd.xml"
-        ],
-        "phpunit": [
-            "phpunit --stop-on-failure --colors=always"
-        ],
-        "phpunit:no": [
-            "@phpunit --no-coverage"
-        ],
-        "packages": [
-            "rm -rdf vendor",
-            "rm -f composer.lock",
-            "composer require --dev codedungeon/phpunit-result-printer dealerdirect/phpcodesniffer-composer-installer fzaninotto/faker nunomaduro/collision phpmd/phpmd phpunit/phpunit squizlabs/php_codesniffer orchestra/testbench"
-        ]
+        "test": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/test.sh",
+        "phpcs": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/php/phpcs.sh",
+        "phpmd": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/php/phpmd.sh",
+        "phpcbf": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/php/phpcbf.sh",
+        "phpunit": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} COVERAGE=1 bash ./fixtures/bin/php/phpunit.sh",
+        "phpunit:no": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/php/phpunit.sh",
+        "packages": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/packages.sh"
     },
     "config": {
         "process-timeout": 1200
