--- a/composer.json
+++ b/composer.json
@@ -61,7 +61,10 @@
         "phpcbf": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/php/phpcbf.sh",
         "phpunit": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} COVERAGE=1 bash ./fixtures/bin/php/phpunit.sh",
         "phpunit:no": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/php/phpunit.sh",
-        "packages": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/packages.sh"
+        "packages": [
+            "@prepare",
+            "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/packages.sh"
+        ]
     },
     "config": {
         "process-timeout": 1200
