chore: sync workflows

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,13 +46,6 @@ jobs:
       - name: Check code style
         run: composer phpcs
         if: env.RUNNING
-      - uses: 8398a7/action-slack@v2
-        with:
-          status: failure
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: failure()
 
   phpmd:
     name: PHPMD
@@ -93,13 +86,6 @@ jobs:
       - name: Check code style
         run: composer phpmd
         if: env.RUNNING
-      - uses: 8398a7/action-slack@v2
-        with:
-          status: failure
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: failure()
 
   phpunit:
     name: PHPUnit
@@ -130,7 +116,7 @@ jobs:
         run: echo "::set-env name=RUNNING::"
         if: "! env.GIT_DIFF"
       - name: Set running flag
-        if: matrix.SEND_CODECOV == 1 && startsWith(github.ref, 'refs/tags/')
+        if: matrix.SEND_CODECOV == 1 && github.ref == format('refs/heads/{0}', github.event.repository.default_branch)
         run: echo "::set-env name=RUNNING::1"
       - name: Set running flag
         run: |
@@ -171,13 +157,6 @@ jobs:
           CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
           COVERAGE_FILE: ./coverage/clover.xml
         if: env.RUNNING && matrix.SEND_CODECOV == 1
-      - uses: 8398a7/action-slack@v2
-        with:
-          status: failure
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: failure()
 
   pages:
     name: Publish GitHub Pages
@@ -223,13 +202,6 @@ jobs:
           BRANCH: gh-pages
           FOLDER: public/gh-pages
         if: env.RUNNING
-      - uses: 8398a7/action-slack@v2
-        with:
-          status: failure
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: failure()
 
   publishRelease:
     name: Create Release
@@ -255,11 +227,21 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: always() && steps.drafter.outputs.html_url
+        if: success()
+
+  slack:
+    name: Slack
+    needs: publishRelease
+    runs-on: ubuntu-latest
+    if: always()
+    steps:
+      - uses: technote-space/workflow-conclusion-action@v1
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - uses: 8398a7/action-slack@v2
         with:
-          status: ${{ job.status }}
+          status: failure
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK_URL }}
-        if: always() && ! steps.drafter.outputs.html_url
+        if: env.WORKFLOW_CONCLUSION == 'failure'
