--- a/composer.json
+++ b/composer.json
@@ -37,13 +37,13 @@
         }
     },
     "require-dev": {
-        "codedungeon/phpunit-result-printer": "^0.28.0 || ^0.29.0",
+        "codedungeon/phpunit-result-printer": "^0.29.3",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.0",
         "fzaninotto/faker": "^1.9",
-        "phpmd/phpmd": "^2.8",
-        "phpunit/phpunit": "^9.3",
+        "phpmd/phpmd": "^2.9",
+        "phpunit/phpunit": "^9.4",
         "squizlabs/php_codesniffer": "^3.5",
-        "orchestra/testbench": "^5.4"
+        "orchestra/testbench": "^6.5"
     },
     "scripts": {
         "setup": [
