chore: update install command

--- a/composer.json
+++ b/composer.json
@@ -53,7 +53,7 @@
             "mkdir -p ./fixtures/.git",
             "chmod -R +w ./fixtures/.git && rm -rdf ./fixtures",
             "git clone --depth=1 https://github.com/wp-content-framework/fixtures.git fixtures",
-            "composer install --no-interaction --prefer-dist --no-suggest"
+            "COMPOSER_MEMORY_LIMIT=-1 $(which composer) install --no-interaction --prefer-dist --no-suggest"
         ],
         "test": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/test.sh",
         "phpcs": "WORKSPACE=${WORKSPACE:-$(cd $(dirname $0); pwd)} bash ./fixtures/bin/php/phpcs.sh",
