--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3|^8.0",
         "laravel/framework": "*"
     },
     "autoload": {
@@ -39,7 +39,7 @@
     "require-dev": {
         "codedungeon/phpunit-result-printer": "^0.30.1",
         "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
-        "fzaninotto/faker": "^1.9",
+        "fakerphp/faker": "^1.14",
         "phpmd/phpmd": "^2.10",
         "phpunit/phpunit": "^9.5",
         "squizlabs/php_codesniffer": "^3.6",
