--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -96,7 +96,7 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        php: ['7.3', '7.4']
+        php: ['7.3', '7.4', '8.0', '8.1']
         include:
           - php: '7.4'
             SEND_CODECOV: 1
